update: 使い方の更新

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -41,9 +41,9 @@
       <div class="sm:w-2/3 flex flex-col">
         <% @alcohol_genre_counts.each do |genre, count| %>
           <% if count >= 3 %>
-            <p class="text-left"><i class="fa-regular fa-chess-king text-yellow-400 mr-2"></i><%= "#{genre}: #{count}" %></p>
+            <p class="text-left"><i class="fa-solid fa-check text-yellow-400 mr-2"></i><%= "#{genre}: #{count}" %></p>
           <% else %>
-            <p class="text-left"><i class="fa-regular fa-chess-king opacity-0 mr-2"></i><%= "#{genre}: #{count}" %></p>
+            <p class="text-left"><i class="fa-solid fa-check opacity-0 mr-2"></i><%= "#{genre}: #{count}" %></p>
           <% end %>
         <% end %>
       </div>
@@ -52,9 +52,9 @@
       <div class="sm:w-2/3 flex flex-col mx-auto">
         <% @appetizer_genre_counts.each do |genre, count| %>
           <% if count >= 3 %>
-            <p class="text-center"><i class="fa-regular fa-chess-king text-yellow-400 mr-2"></i><%= "#{genre}: #{count}" %></p>
+            <p class="text-center"><i class="fa-solid fa-check text-yellow-400 mr-2"></i><%= "#{genre}: #{count}" %></p>
           <% else %>
-            <p class="text-center"><i class="fa-regular fa-chess-king opacity-0 mr-2"></i><%= "#{genre}: #{count}" %></p>
+            <p class="text-center"><i class="fa-solid fa-check opacity-0 mr-2"></i><%= "#{genre}: #{count}" %></p>
           <% end %>
         <% end %>
       </div>
