--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -28,7 +28,7 @@
       </div>
       <div tabindex="0" class="card compact dropdown-content z-[1] shadow bg-gray-200 rounded-box w-64">
         <div tabindex="0" class="card-body">
-          <p class="">投稿数が3以上の場合、<i class="fa-regular fa-chess-king text-yellow-400"></i>が表示されます。</p>
+          <p class="">投稿数が3以上の場合、<i class="fa-solid fa-check text-yellow-400"></i>が表示されます。</p>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
       </div>
       <div tabindex="0" class="card compact dropdown-content z-[1] shadow bg-gray-200 rounded-box w-64">
         <div tabindex="0" class="card-body">
-          <p class="">お酒のジャンル毎に3投稿以上で、称号を取得できます。</p>
+          <p class="">お酒のジャンル毎に3投稿以上で、称号を獲得できます。</p>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
       </div>
       <div tabindex="0" class="card compact dropdown-content z-[1] shadow bg-gray-200 rounded-box w-64">
         <div tabindex="0" class="card-body">
-          <p class="">おつまみのジャンル毎に3投稿以上で、称号を取得できます。</p>
+          <p class="">おつまみのジャンル毎に3投稿以上で、称号を獲得できます。</p>
         </div>
       </div>
     </div>
