--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,12 +1,12 @@
 <div class="w-5/6 mx-auto max-w-screen-xl">
-  <div class="flex justify-center items-center flex-col-reverse md:flex-row mt-10 md:mt-40">
+  <div class="flex justify-center items-center flex-col-reverse md:flex-row my-10 md:mt-40">
     <div class="w-full md:w-1/2 flex flex-col mt-10 md:mt-0">
       <div class="space-y-2">
-        <h1 class="text-2xl md:text-4xl font-bold text-center drop-shadow-xl">
-          酒菜ネットは、お酒&おつまみの
+        <h1 class="text-xl md:text-2xl text-center drop-shadow-xl mb-5">
+          お酒&おつまみの情報共有、AI組合せで
         </h1>
         <h1 class="text-2xl md:text-4xl font-bold text-center drop-shadow-xl">
-          情報共有サービスです
+          晩酌・飲み会をより豊かに
         </h1>
       </div>
       <div class="mx-auto my-10">
@@ -19,10 +19,6 @@
     <div class="flex items-center justify-center w-full md:w-1/2">
       <%= image_tag 'top_icon.webp', class: 'rounded-xl border shadow-2xl w-72 h-auto md:w-80 md:h-auto' %>
     </div>
-  </div>
-  <div class="flex flex-wrap justify-center">
-    <p class="text-center text-lg text-gray-700 font-bold md:text-lg md:pt-5 md:mb-12">みんなのアイデアで</p>
-    <p class="text-center text-lg text-gray-700 font-bold md:text-lg md:pt-5 mb-10">晩酌、飲み会をより豊かに...</p>
   </div>
   <div class="flex justify-center items-center">
     <i class="fa-solid fa-angles-down fa-lg pr-2"></i>
