--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,14 +1,17 @@
 <div class="w-5/6 mx-auto max-w-screen-xl">
   <div class="flex justify-center items-center flex-col-reverse md:flex-row my-10 md:mt-40">
     <div class="w-full md:w-1/2 flex flex-col mt-10 md:mt-0">
-      <div class="space-y-2">
-        <h1 class="text-xl md:text-2xl text-center drop-shadow-xl mb-5">
-          お酒&おつまみの情報共有、AI組合せで
+      <div class="flex flex-col lg:flex-row items-center mb-5 mx-auto">
+        <h1 class="text-xl md:text-2xl text-center drop-shadow-xl">
+          お酒&おつまみの
         </h1>
-        <h1 class="text-2xl md:text-4xl font-bold text-center drop-shadow-xl">
-          晩酌・飲み会をより豊かに
+        <h1 class="text-xl md:text-2xl text-center drop-shadow-xl">
+          情報共有、AI組合せで
         </h1>
       </div>
+      <h1 class="text-2xl md:text-4xl font-bold text-center drop-shadow-xl">
+        晩酌・飲み会をより豊かに
+      </h1>
       <div class="mx-auto my-10">
         <p class="text-center text-sm md:text-base mb-10">このような経験ありませんか？？</p>
         <p class="rounded-full bg-gradient-to-r from-gray-800 to-gray-500 font-bold text-white text-center p-2 mb-4">いつもと違うお酒が飲んでみたい...</p>
