--- a/app/views/appetizers/show.html.erb
+++ b/app/views/appetizers/show.html.erb
@@ -35,7 +35,7 @@
         <% end %>
       </div>
       <div class="flex justify-center w-1/2 md:w-1/3 mb-10 md:mb-0">
-        <% link_url = "http://line.me/R/msg/text/?" + CGI.escape("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n---酒菜ネット---\n #{request.base_url + appetizers_path(@appetizer)}") %>
+        <% link_url = "http://line.me/R/msg/text/?" + CGI.escape("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n---酒菜ネット---\n #{request.base_url + appetizers_path(@appetizer.id)}") %>
         <%= link_to link_url, title: 'LINEで共有', class: 'flex items-center text-[#00B900] hover:text-[#00CC33] bg-[#f5f5f5] hover:bg-[#f8f8f8] border font-bold rounded-full px-3 py-1 md:px-4 md:py-2', target: '_blank', rel: 'noopener noreferrer' do %>
           <i class="fa-brands fa-line fa-2x text-[#00B900] hover:text-[#00CC33] mr-1"></i>共有
         <% end %>
