--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,7 +39,7 @@
             <%= link_to x_url, title: 'Xで共有', target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
                 class: "bg-slate-950 hover:bg-slate-700 text-white py-1 px-2 rounded-[5px] text-lg mr-5", rel: 'noopener noreferrer' do %>
               <i class="fa-brands fa-x-twitter"></i>
-            <% line_url = "http://line.me/R/msg/text/?" + CGI.escape("本日のお酒&おつまみは\n「#{@post.alcohol}&#{@post.appetizer}」！\n---酒菜ネット---\n #{request.base_url + posts_path(@post)}") %>
+            <% line_url = "http://line.me/R/msg/text/?" + CGI.escape("本日のお酒&おつまみは\n「#{@post.alcohol}&#{@post.appetizer}」！\n---酒菜ネット---\n #{request.base_url + post_path(@post)}") %>
             <%= link_to line_url, title: 'LINEで共有', class: 'hover:text-[#00CC33] text-[#00B900] rounded-[5px] text-lg pt-1 mr-5', target: '_blank', rel: 'noopener noreferrer' do %>
               <i class="fa-brands fa-line fa-2x"></i>
             <% end %>
