--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -29,20 +29,29 @@
     <i class="fa-solid fa-angles-down fa-lg pl-2"></i>
   </div>
   <%= render 'explanation' %>
-  <div class="flex flex-wrap mb-14">
-    <div class="w-full md:w-1/3 flex justify-center">
-      <%= link_to new_user_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2 mb-3 md:mb-0' do %>
-        <i class="fa-solid fa-user-plus mr-2"></i>新規登録
-      <% end %>
-    </div>
-    <div class="w-full md:w-1/3 flex justify-center">
-      <%= link_to login_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2 mb-3 md:mb-0' do %>
-        <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>ログイン
-      <% end %>
-    </div>
-    <div class="w-full md:w-1/3 flex justify-center">
+  <% if current_user.present? %>
+    <div class="flex justify-center mb-10 md:mb-14">
       <%= link_to posts_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2' do %>
         <i class="fa-solid fa-list mr-2"></i>みんなの投稿
       <% end %>
     </div>
+  <% else %>
+    <div class="flex flex-wrap mb-10 md:mb-14">
+      <div class="w-full md:w-1/3 flex justify-center">
+        <%= link_to new_user_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2 mb-3 md:mb-0' do %>
+          <i class="fa-solid fa-user-plus mr-2"></i>新規登録
+        <% end %>
+      </div>
+      <div class="w-full md:w-1/3 flex justify-center">
+        <%= link_to login_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2 mb-3 md:mb-0' do %>
+          <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>ログイン
+        <% end %>
+      </div>
+      <div class="w-full md:w-1/3 flex justify-center">
+      <%= link_to posts_path, class: 'text-lg font-bold bg-yellow-400 rounded-full shadow-lg hover:bg-yellow-300 px-4 py-2' do %>
+        <i class="fa-solid fa-list mr-2"></i>みんなの投稿
+      <% end %>
+    </div>
+    </div>
+  <% end %>
 </div>
