--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,6 +19,11 @@
       <%= link_to t('header.create_post'), new_post_path, class: 'hover:text-gray-500' %>
       <%= link_to t('header.create_appetizer'), new_appetizer_path, class: 'hover:text-gray-500' %>
       <div class="dropdown dropdown-hover">
+        <i class="fa-regular fa-bell"></i>
+        <%= render 'notifications/notification_count' %>
+        <%= render 'shared/notifications_dropdown' %>
+      </div>
+      <div class="dropdown dropdown-hover">
         <% if current_user.avatar? %>
           <%= image_tag current_user.avatar.url, class:"rounded-[10px] w-10 h-10" %>
         <% else %>
