update: レイアウト調整

--- a/app/views/shared/_notifications_dropdown.html.erb
+++ b/app/views/shared/_notifications_dropdown.html.erb
@@ -1,11 +1,13 @@
-<ul tabindex="0" class="absolute right-0 dropdown-content z-[1] p-2 shadow bg-base-100 rounded-box" style="width: 600px;">
+<ul tabindex="0" class="absolute -right-16 dropdown-content z-[1] p-2 text-sm shadow bg-base-100 rounded-box" style="width: 500px;">
   <%= turbo_frame_tag 'notifications' do %>
     <% if @notifications.present? %>
-              <%= link_to '全てを既読する', mark_all_as_read_notifications_path,
-              class: 'btn',
-              method: :delete,
-              remote: true,
-              data: {turbo_method: :delete } %>
+              <div class="flex justify-center items-center">
+                <%= link_to '全てを既読する', mark_all_as_read_notifications_path,
+                class: 'bg-point hover:bg-yellow-400 rounded-[10px] px-3 py-2',
+                method: :delete,
+                remote: true,
+                data: {turbo_method: :delete } %>
+              </div>
               <% @notifications.each do |notification| %>
                   <%= render 'notifications/notification', { notification: notification } %>
               <% end %>
