--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,12 +1,11 @@
 <%= turbo_frame_tag dom_id(notification) do %>
-  <li data-notification-id="<%= notification.id %>" class="<%= notification.unread ? 'unread' : '' %>">
+  <li data-notification-id="<%= notification.id %>" class="<%= notification.unread ? 'unread' : '' %> mt-2">
     <%= link_to notification_path(notification),
-    class: "text-amber-300",
     method: :patch,
     data: { turbo_method: :patch } do %>
-                <i class="fa-regular fa-square-check mr-2"></i>
+                <i class="fa-regular fa-square-check fa-lg hover:text-yellow-400 mr-2"></i>
               <% end %>
     <%= generate_notification_message(notification)%>
-    <span class="notification-time ml-3"><%= time_ago_in_words(notification.created_at) %> 前</span>
+    <span class="notification-time text-xs ml-3"><%= time_ago_in_words(notification.created_at) %>前</span>
   </li>
 <% end %>
