--- a/app/views/notifications/_notification_count.html.erb
+++ b/app/views/notifications/_notification_count.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag 'notification_count' do %>
   <% if current_user.received_notifications.unread.present? %>
-    <span class="absolute -top-2 text-sm text-red-600 bg-white rounded-lg px-1">
+    <span class="absolute -top-2 -right-2 text-sm text-red-600 bg-white rounded-lg px-1">
       <%= current_user.received_notifications.unread.size %>
     </span>
   <% end %>
