--- a/app/views/shared/_notifications_dropdown.html.erb
+++ b/app/views/shared/_notifications_dropdown.html.erb
@@ -1,11 +1,13 @@
 <%= turbo_frame_tag 'notifications' do %>
   <% if @notifications.present? %>
     <div class="flex justify-center items-center">
-      <%= link_to '全てを既読する', mark_all_as_read_notifications_path,
-      class: 'bg-point hover:bg-yellow-400 rounded-[10px] px-3 py-2',
+      <%= link_to mark_all_as_read_notifications_path,
+      class: 'bg-gray-200 hover:bg-red-400 rounded-[10px] px-3 py-2',
       method: :delete,
       remote: true,
-      data: {turbo_method: :delete } %>
+      data: {turbo_method: :delete } do %>
+        全て既読 <i class="fa-regular fa-trash-can fa-lg"></i>
+      <% end %>
     </div>
     <% @notifications.each do |notification| %>
         <%= render 'notifications/notification', { notification: notification } %>
